# iplinux-xorg-server

./: configure.ac
Xext/: shape.c  shm.c  shmint.h  sync.c  xtest.c
dbe/: dbestruct.h
debian/: changelog  control  rules
dix/: cursor.c  dispatch.c  main.c
hw/kdrive/fbdev/: fbdev.c  fbdev.h
hw/kdrive/linux/: Makefile.am  apm.c  apm.h  evdev.c  linux.c
hw/kdrive/src/: kdrive.c  kdrive.h  kinput.c
hw/xfree86/dixmods/extmod/: modinit.h
hw/xfree86/os-support/bsd/: Makefile.am
hw/xfree86/os-support/linux/: Makefile.am
hw/xfree86/os-support/solaris/: Makefile.am
include/: dix-config.h.in  dix.h  kdrive-config.h.in
mi/: miinitext.c  miscrinit.c
os/: utils.c
render/: glyph.c
xkb/: ddxLoad.c
